fixed truncate

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,7 +33,7 @@ body {
   overflow: hidden;
   display: -webkit-box;
   display: -moz-box;
-  -webkit-line-clamp: 7;
+  -webkit-line-clamp: 4;
   -moz-box-orient: vertical;
   -webkit-box-orient: vertical;
 }
